// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1 has appropriate message if no corresponding variant found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1
     may correspond to a different variant or variants in 
    GRCh38
    .
    <div
      className="StatusMessage-sc-neg7mh-0 hJFlwG"
    >
      No corresponding variants found
    </div>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1 renders links to each variant if multiple corresponding variants found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1
     may correspond to a different variant or variants in 
    GRCh38
    .
    <ul>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source1?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source1
        </a>
      </li>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source2?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_controls has appropriate message if no corresponding variant found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (controls)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <div
      className="StatusMessage-sc-neg7mh-0 hJFlwG"
    >
      No corresponding variants found
    </div>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_controls renders links to each variant if multiple corresponding variants found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (controls)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <ul>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source1?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source1
        </a>
      </li>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source2?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_non_cancer has appropriate message if no corresponding variant found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (non-cancer)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <div
      className="StatusMessage-sc-neg7mh-0 hJFlwG"
    >
      No corresponding variants found
    </div>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_non_cancer renders links to each variant if multiple corresponding variants found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (non-cancer)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <ul>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source1?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source1
        </a>
      </li>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source2?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_non_neuro has appropriate message if no corresponding variant found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (non-neuro)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <div
      className="StatusMessage-sc-neg7mh-0 hJFlwG"
    >
      No corresponding variants found
    </div>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_non_neuro renders links to each variant if multiple corresponding variants found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (non-neuro)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <ul>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source1?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source1
        </a>
      </li>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source2?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_non_topmed has appropriate message if no corresponding variant found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (non-TOPMed)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <div
      className="StatusMessage-sc-neg7mh-0 hJFlwG"
    >
      No corresponding variants found
    </div>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover source dataset gnomad_r2_1_non_topmed renders links to each variant if multiple corresponding variants found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v2.1.1 (non-TOPMed)
     may correspond to a different variant or variants in 
    GRCh38
    .
    <ul>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source1?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source1
        </a>
      </li>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source2?dataset=gnomad_r4"
          onClick={[Function]}
        >
          source2
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover target dataset gnomad_r4 has appropriate message if no corresponding variant found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v4.0.0
     may correspond to a different variant or variants in 
    GRCh37
    .
    <div
      className="StatusMessage-sc-neg7mh-0 hJFlwG"
    >
      No corresponding variants found
    </div>
  </div>
</div>
`;

exports[`LiftoverDisambiguationPage starting from liftover target dataset gnomad_r4 renders links to each variant if multiple corresponding variants found 1`] = `
<div
  className="Page-w7h773-0 TrackPage-sc-1xq3qi7-0 dWdnsu"
>
  <div
    className="TrackPage__TrackPageSection-sc-1xq3qi7-1 fQVUsz"
  >
    Due to liftover, variant 
    fakevariant
     in dataset 
    gnomAD v4.0.0
     may correspond to a different variant or variants in 
    GRCh37
    .
    <ul>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source1?dataset=gnomad_r2_1"
          onClick={[Function]}
        >
          source1
        </a>
      </li>
      <li>
        <a
          className="Link-sc-14lgydv-0-Link jBvaYQ"
          href="/variant/source2?dataset=gnomad_r2_1"
          onClick={[Function]}
        >
          source2
        </a>
      </li>
    </ul>
  </div>
</div>
`;
